Acrescentado valor das vendas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Página home</h1>
-    <a href="vendas.html">Ir para a página de vendas</a>
+    <a href="vendas.html">Ir para a Página de Vendas</a>
 </body>
 </html>
