--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página de Vendas</h1>
+    <p>Vendas = R4 500,00</p>
     <a href="index.html">voltar para a página de inicial</a>
 </body>
 </html>
